# wave_forge

./: .gitignore  @wfc-gpu-TODO.md  Cargo.toml  README.md  clippy.toml  custom-rule.ron  test-all.ps1  test-core.bat  test-core.ps1  wfc-gpu.md
.cargo/: clippy.toml  config.toml
.cursor/rules/: conventions.mdc  wfc-gpu.mdc
docs/: README.md  buffer_allocation_strategy.md  gpu_migration_guide.md  gpu_migration_plan.md  numerical_stability.md  public_api.md  wfc-gpu_architecture.md
docs/benchmarks/: README.md  analyzing_benchmarks.md  visualization_examples.md
docs/sample_configs/: README.md  simple2d_viz.md  terminal_viz.md
docs/todos/: TODO.md  wave-forge-app-TODO.md  wfc-core-TODO.md  wfc-gpu-2-TODO.md  wfc-gpu-3-TODO.md  wfc-gpu-TODO.md  wfc-rules-TODO.md
examples/: simple-pattern.ron  simple2d_viz_demo.bat  terminal_viz_demo.bat  viz_benchmark_comparison.bat
src/: benchmark.rs  config.rs  error.rs  main.rs  profiler.rs  progress.rs  visualization.rs
src/setup/: execution.rs  mod.rs
src/shader/shaders/components/: registry.json
wave-forge-app/: Cargo.toml
wave-forge-app/benches/: wfc_comparison.rs
wave-forge-app/src/: benchmark.rs  bin.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  output.rs  profiler.rs  progress.rs  visualization.rs
wave-forge-app/src/setup/: execution.rs  mod.rs  visualization.rs
wave-forge-app/tests/: basic_test.rs  integration_tests.rs  visualization_tests.rs  visualization_tests.rs.bak
wfc-core/: Cargo.toml
wfc-core/src/: entropy.rs  grid.rs  lib.rs  propagator.rs  rules.rs  runner.rs  tile.rs
wfc-core/src/entropy/: cpu.rs
wfc-core/src/propagator/: cpu.rs
wfc-core/tests/: entropy_tests.rs  grid_tests.rs  integration_tests.rs  propagator_tests.rs
wfc-gpu/: Cargo.toml  TODO.md  build.rs
wfc-gpu/benches/: gpu_benchmarks.rs
wfc-gpu/docs/: buffer_lifecycle.md  customization.md
wfc-gpu/src/: accelerator.rs  backend.rs  buffers.rs  debug_viz.rs  entropy.rs  error_recovery.rs  lib.rs  pipeline.rs  propagator.rs  shader_compiler.rs  shader_registry.rs  shader_validation_tests.rs  shaders.rs  subgrid.rs  sync.rs  test_utils.rs  tests.rs  wfc.rs
wfc-gpu/src/algorithm/: mod.rs  propagator_strategy.rs
wfc-gpu/src/buffers/: entropy_buffers.rs  grid_buffers.rs  mod.rs  rule_buffers.rs  worklist_buffers.rs
wfc-gpu/src/coordination/: entropy.rs  mod.rs  propagation.rs  strategy.rs
wfc-gpu/src/entropy/: calculator.rs  entropy_strategy.rs  mod.rs  strategy.rs
wfc-gpu/src/gpu/: accelerator.rs  backend.rs  mod.rs  sync.rs
wfc-gpu/src/gpu/features/: atomics.rs  mod.rs  workgroups.rs
wfc-gpu/src/propagator/: adaptive_strategy.rs  direct_strategy.rs  gpu_constraint_propagator.rs  mod.rs  propagator_strategy.rs  subgrid_strategy.rs  utils.rs
wfc-gpu/src/propagator/algorithm/: entropy_strategy.rs  mod.rs
wfc-gpu/src/shader/: mod.rs  pipeline.rs  shader_compiler.rs  shader_registry.rs  shaders.rs
wfc-gpu/src/shader/shaders/: coords.wgsl  entropy.wgsl  propagate.wgsl  rules.wgsl
wfc-gpu/src/shader/shaders/components/: contradiction_detection.wgsl  registry.json  worklist_management.wgsl
wfc-gpu/src/shader/shaders/components/entropy/: count_based.wgsl  shannon.wgsl
wfc-gpu/src/shader/shaders/components/propagation/: direct.wgsl  subgrid.wgsl
wfc-gpu/src/shaders/: coords.wgsl  entropy.wgsl  entropy_fallback.wgsl  entropy_modular.wgsl  propagate.wgsl  propagate_fallback.wgsl  propagate_modular.wgsl  rules.wgsl  test_shader.wgsl  utils.wgsl
wfc-gpu/src/shaders/components/: cell_collapse.wgsl  contradiction_detection.wgsl  entropy_calculation.wgsl  registry.json  worklist_management.wgsl
wfc-gpu/src/shaders/schemas/: component.json  feature.json
wfc-gpu/src/tests/: entropy_strategies.rs  mod.rs  propagation_strategies.rs
wfc-gpu/src/utils/: debug_viz.rs  error_recovery.rs  mod.rs
wfc-gpu/src/utils/error/: gpu_error.rs  io_error.rs  mod.rs
wfc-gpu/src/utils/error_recovery/: mod.rs  strategies.rs
wfc-gpu/tests/: accelerator_tests.rs  buffer_tests.rs  large_tileset_init_test.rs  large_tileset_test.rs  mod.rs
wfc-gpu/tools/: shader_optimizer.rs  shader_validator.rs
wfc-rules/: Cargo.toml
wfc-rules/src/: generator.rs  lib.rs  loader.rs  types.rs
wfc-rules/src/formats/: mod.rs  parser.rs  ron_format.rs
wfc-rules/tests/: loader_tests.rs
wfc-rules/tests/rules_data/: invalid_bad_axis.ron  invalid_dup_name.ron  invalid_format.ron  invalid_neg_weight.ron  invalid_unknown_tile.ron  valid_simple.ron
