[package]
name = "wave_forge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
    "wfc-core",
    "wfc-rules",
    "wfc-gpu",
]

[workspace.dependencies]
# Add common dependencies here if needed later

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.lints.clippy]
restriction = "warn"
pedantic = "warn"
nursery = "warn"
