[package]
name = "wave_forge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
humantime = "2.1"
bitvec = "1.0"
colored = "2.0"
minifb = "0.25"
thiserror = "1.0"
csv = "1.2"
wgpu = { version = "25.0.0", features = ["dx12", "metal", "vulkan", "wgsl", "naga-ir"] }
pollster = "0.3"
once_cell = "1.17"

# Local crates
wfc-core = { path = "./wfc-core" }
wfc-rules = { path = "./wfc-rules" }
wfc-gpu = { path = "./wfc-gpu" }

[workspace]
members = [
    "wfc-core",
    "wfc-rules",
    "wfc-gpu",
]

[workspace.dependencies]
# Add common dependencies here if needed later

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.lints.clippy]
restriction = "warn"
pedantic = "warn"
nursery = "warn"
