[package]
name = "wave_forge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
humantime = "2.1"
bitvec = "1.0"
colored = "2.0"
minifb = "0.25"
thiserror = "1.0"
csv = "1.2"
wgpu = { version = "25.0.0", features = ["dx12", "metal", "vulkan", "wgsl", "naga-ir"] }
pollster = "0.3"
once_cell = "1.17"

# Local crates
wfc-core = { path = "./wfc-core" }
wfc-rules = { path = "./wfc-rules" }
wfc-gpu = { path = "./wfc-gpu" }

[workspace]
members = [
    "wfc-core",
    "wfc-rules",
    "wfc-gpu",
]

[workspace.dependencies]
# Add common dependencies here if needed later

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# Specific clippy lints we care about
pedantic = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
nursery = "warn"
suspicious = "warn"

# Individual lints
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
dbg_macro = "warn"
unimplemented = "warn"

# Disable specific pedantic lints that are too noisy
module-name-repetitions = { level = "allow", priority = 1 }
cast-possible-truncation = { level = "allow", priority = 1 }
cast-precision-loss = { level = "allow", priority = 1 }
cast-sign-loss = { level = "allow", priority = 1 }
doc-markdown = { level = "allow", priority = 1 }
must-use-candidate = { level = "allow", priority = 1 }
missing-errors-doc = { level = "allow", priority = 1 }
