[package]
name = "wave-forge-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wave-forge"
path = "src/main.rs"

[dependencies]
wfc-core = { path = "../wfc-core" }
wfc-rules = { path = "../wfc-rules" }
wfc-gpu = { path = "../wfc-gpu" }

clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0" # For application-level error handling
humantime = "2.1" # For parsing duration strings
tokio = { version = "1", features = ["full"] } # Add tokio for async runtime
csv = "1.3.1"
colored = "3.0.0"
minifb = "0.28.0"
bitvec = "1.0.1"
once_cell = "1.18.0" # For static initialization
winapi = { version = "0.3", features = ["psapi", "processthreadsapi"], optional = true }
figment = { version = "0.10", features = ["toml", "env"] } # For configuration file loading

[features]
default = []
winapi = ["dep:winapi"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8" 
