[package]
name = "wave-forge-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wave-forge"
path = "src/main.rs"

[dependencies]
wfc-core = { path = "../wfc-core" }
wfc-rules = { path = "../wfc-rules" }
wfc-gpu = { path = "../wfc-gpu" }
wgpu = { version = "0.20", features = ["naga"] }

clap = { version = "4.5", features = ["derive", "env"] }
rayon = "1.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0" # For application-level error handling
humantime = "2.1" # For parsing duration strings
tokio = { version = "1", features = ["full"] } # Add tokio for async runtime
csv = "1.3.1"
colored = "3.0.0"
minifb = "0.28.0"
bitvec = "1.0.1"
once_cell = "1.18.0" # For static initialization
winapi = { version = "0.3", features = ["psapi", "processthreadsapi"], optional = true }
figment = { version = "0.10", features = ["toml", "env"] } # For configuration file loading
serde = { version = "1.0", features = ["derive"] } # Add serde for deserialization
thiserror = "1.0" # Added thiserror

[features]
default = []
winapi = ["dep:winapi"]
gpu = [] # Added gpu feature

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = "0.5"
pollster = "0.3" # For blocking on async GPU setup in benches

[[bench]]
name = "wfc_comparison"
harness = false
