[package]
name = "wfc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wfc-rules = { path = "../wfc-rules" } # Added for rule/tileset types
bitvec = { version = "1.0", features = ["serde"] } # Enable serde feature for bitvec
rayon = "1.8" # Added for parallel entropy calculation
float-ord = "0.3" # Corrected name (was float_ord)
log = "0.4"
rand = "0.8" # Added for random tile selection during collapse
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] } # Add serde dependency
serde_json = "1.0" # Move serde_json to regular dependencies
bincode = "1.3"

[dev-dependencies]
tempfile = "3.3"
mockall = "0.11" # Add mockall dev dependency

[features]