[package]
name = "wfc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wfc-rules = { path = "../wfc-rules" } # Added for rule/tileset types
bitvec = { version = "1.0", features = ["serde"] } # Enable serde feature for bitvec
rayon = "1.10.0" # Added for parallel entropy calculation
float-ord = "0.3" # Corrected name (was float_ord)
log = "0.4"
rand = "0.8" # Added for random tile selection during collapse
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true } # Added optional = true
serde_json = { version = "1.0", optional = true } # Added optional = true
bincode = { version = "1.3", optional = true }    # Added optional = true
clap = { version = "4.5.4", features = ["derive"], optional = true }
nalgebra = "0.32"
num-traits = "0.2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
mockall = "0.12" # Add mockall
proptest = "1.4" # Add proptest
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.3"
pollster = "0.3.0" # Added pollster for blocking async calls in tests

[features]
default = []
clap = ["dep:clap"]
serde = ["dep:serde", "dep:serde_json", "dep:bincode"] # Assuming serde needs these