[package]
name = "wfc-gpu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
futures = "0.3.30" # Required by pollster
futures-intrusive = "0.5" # For async channel in buffer download
glam = { version = "0.27.0", features = ["bytemuck"] }
bytemuck = { version = "1.15", features = ["derive"] }
log = "0.4.21"
num_cpus = "1.16.0"
once_cell = "1.19.0" # For caching
pollster = "0.3.0"
rayon = "1.10.0"
seahash = "4.1.0"     # For hashing cache keys
thiserror = "1.0.59"
wgpu = "0.20" # Check for compatibility updates
wgpu-profiler = "0.17.0" # Match wgpu version if possible

wfc-core = { path = "../wfc-core", features = ["serde"] }
wfc-rules = { path = "../wfc-rules" }

# Add async-trait
async-trait = "0.1"
# Add tokio (time feature needed for sleep in tests)
tokio = { version = "1", features = ["sync", "time"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.4.0" # Moved from build-dependencies

[dev-dependencies]
env_logger = "0.11.3"
rand = "0.8.5"
test-strategy = "0.3.1"
proptest = "1.4.0"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "gpu_benchmarks"
harness = false 

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
