[package]
name = "wfc-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Example, could use ron instead
ron = "0.8"        # Example, could use JSON instead
thiserror = "1.0"
log = "0.4"
rayon = "1.8" # For potential parallel parsing

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"