[package]
name = "wfc-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
nalgebra = "0.32.5"
num-traits = "0.2.18"
log = "0.4.21"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.115", optional = true }
ron = "0.8"        # Example, could use JSON instead
rayon = "1.8" # For potential parallel parsing

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]